@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 	<META NAME="robots" CONTENT="noindex">
-	<TITLE>FLTK 1.1.6 Programming Manual</TITLE>
+	<TITLE>FLTK 1.1.7 Programming Manual</TITLE>
 </HEAD>
 <BODY>
 
@@ -10,8 +10,8 @@
 	<TD VALIGN="MIDDLE">
 	<IMG SRC="FL.gif" WIDTH="200" HEIGHT="100" ALIGN="ABSMIDDLE" ALT="FL"></TD>
 	<TD ALIGN="CENTER" VALIGN="MIDDLE">
-	<H1>FLTK 1.1.6 Programming Manual</H1>
-	<P>Revision 6 by Michael Sweet, Craig P. Earls, and Bill Spitzak<BR>
+	<H1>FLTK 1.1.7 Programming Manual</H1>
+	<P>Revision 7 by Michael Sweet, Craig P. Earls, and Bill Spitzak<BR>
 	Copyright 1998-2004 by Bill Spitzak and others.</P>
 	</TD>
 </TR>
