@@ -3,14 +3,14 @@
 	<META CONTENT="Written by Michael Sweet, Craig P. Earls, and Bill Spitzak" NAME="Author">
 	<META CONTENT="Copyright 1998-2004 by Bill Spitzak and Others." NAME="Copyright">
 	<META CONTENT="Revision 6" NAME="DocNumber">
-	<TITLE>FLTK 1.1.6 Programming Manual</TITLE>
+	<TITLE>FLTK 1.1.7 Programming Manual</TITLE>
 </HEAD>
 <BODY>
 
 <H1 ALIGN="RIGHT"><A NAME="preface">Preface</A></H1>
 
 <P>This manual describes the Fast Light Tool Kit (&quot;FLTK&quot;)
-version 1.1.6, a C++ Graphical User Interface
+version 1.1.7, a C++ Graphical User Interface
 (&quot;GUI&quot;) toolkit for UNIX, Microsoft Windows and MacOS. Each
 of the chapters in this manual is designed as a tutorial for
 using FLTK, while the appendices provide a convenient reference
