@@ -45,6 +45,7 @@ description of the <TT>fl_</TT> functions, see
 <A HREF="Fl_Image.html">Fl_Image</A><BR>
 <A HREF="Fl_Input_.html">Fl_Input_</A><BR>
 <A HREF="Fl_Input.html">Fl_Input</A><BR>
+<A HREF="Fl_Input_Choice.html">Fl_Input_Choice</A><BR>
 <A HREF="Fl_Int_Input.html">Fl_Int_Input</A><BR>
 <A HREF="Fl_JPEG_Image.html">Fl_JPEG_Image</A><BR>
 <A HREF="Fl_Light_Button.html">Fl_Light_Button</A><BR>
@@ -161,6 +162,7 @@ description of the <TT>fl_</TT> functions, see
 	    <LI><A HREF="Fl_File_Chooser.html#Fl_File_Chooser">Fl_File_Chooser</A>
 	    <LI><A HREF="Fl_Help_Dialog.html#Fl_Help_Dialog">Fl_Help_Dialog</A>
 	    <LI><A HREF="Fl_Help_View.html#Fl_Help_View">Fl_Help_View</A>
+            <LI><A HREF="Fl_Input_Choice.html">Fl_Input_Choice</A>
 	    <LI><A HREF="Fl_Pack.html#Fl_Pack">Fl_Pack</A>
 	    <LI><A HREF="Fl_Scroll.html#Fl_Scroll">Fl_Scroll</A>
 	    <LI><A HREF="Fl_Tabs.html#Fl_Tabs">Fl_Tabs</A>
